syntax = "proto3";
package ubt.services;

option java_multiple_files = true;
option go_package = "api/gen";

import "commons.proto";
import "models.proto";

message GetCurrencyRequest {
  ChainId chain_id = 1;
  string id = 2;
}

service UbtCurrencyService {
  rpc getCurrency(GetCurrencyRequest) returns (Currency);
}